Clean up index.html by removing excess styles
Removed unused styles and elements from the HTML file.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>¿Cuánto Yngwie llevas dentro?</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+<!-- Fuente moderna -->
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
 
 <style>
@@ -67,495 +68,3 @@
   img.hero {
     display:block;
     margin: 0 auto 18px auto;
-    max-width: 260px;
-    width: 90%;
-    border-radius: 12px;
-    box-shadow: 0 0 20px rgba(230,57,70,0.35);
-  }
-
-  button {
-    padding: 12px 20px;
-    border-radius: 10px;
-    border: none;
-    font-weight: 600;
-    cursor: pointer;
-    transition: 0.2s;
-  }
-
-  .btn-primary {
-    background: var(--accent);
-    color: white;
-    width: 100%;
-    margin-top: 10px;
-  }
-
-  .btn-primary:hover {
-    background: var(--accent-soft);
-  }
-
-  .btn-outline {
-    background: transparent;
-    border: 1px solid var(--border);
-    color: var(--text);
-    width: 100%;
-    margin-top: 10px;
-  }
-
-  .btn-outline:hover {
-    border-color: var(--accent-soft);
-    color: var(--accent-soft);
-  }
-
-  .top-bar {
-    display:flex;
-    justify-content: space-between;
-    align-items:center;
-    margin-bottom:10px;
-    gap:10px;
-  }
-
-  .sound-toggle {
-    font-size:0.8rem;
-    color:var(--text-soft);
-    cursor:pointer;
-    user-select:none;
-  }
-
-  .sound-toggle span {
-    font-weight:600;
-    color:var(--accent-soft);
-  }
-
-  .hidden { display:none !important; }
-
-  .question-block {
-    background: var(--panel2);
-    border: 1px solid var(--border);
-    border-radius: 12px;
-    padding: 14px;
-    margin-bottom: 16px;
-  }
-
-  .q-title { font-weight: 600; margin-bottom: 4px; }
-  .q-sub   { font-size: 0.85rem; color: var(--text-soft); margin-bottom: 8px; }
-
-  .option { 
-    margin: 5px 0;
-    display:flex;
-    align-items:flex-start;
-    gap:8px;
-    cursor:pointer;
-  }
-
-  .option input { margin-top:3px; cursor:pointer; }
-
-  .result-box {
-    background: var(--panel2);
-    border-radius: 12px;
-    padding: 18px;
-    margin-top: 20px;
-    border: 1px solid var(--border);
-  }
-
-  .overlay {
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.78);
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    z-index: 20;
-  }
-
-  .overlay-card {
-    background: var(--panel);
-    border: 1px solid var(--border);
-    padding: 26px;
-    border-radius: 16px;
-    max-width: 380px;
-    width: 88%;
-    text-align: center;
-    color: var(--text);
-    box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-    animation: fadeIn 0.3s ease-out;
-  }
-
-  .big-emoji {
-    font-size: 2.8rem;
-    margin-bottom: 10px;
-  }
-
-  input[type="text"] {
-    width: 100%;
-    margin-top: 14px;
-    padding: 10px 12px;
-    border-radius: 10px;
-    border: 1px solid var(--border);
-    background: var(--panel2);
-    color: var(--text);
-  }
-
-  ol {
-    padding-left: 20px;
-    margin-top: 14px;
-  }
-</style>
-</head>
-
-<body>
-<div class="container">
-
-  <!-- INICIO -->
-  <div class="card" id="startScreen">
-    <img src="yngwie.jpg" class="hero" alt="Yngwie">
-
-    <h1>¿Cuánto Yngwie llevas dentro?</h1>
-    <p class="subtitle">
-      Test para fans de Yngwie, del shred y de los solos eternos.
-    </p>
-
-    <button class="btn-primary" id="btnStart">Empezar test</button>
-    <button class="btn-outline" id="btnShowRules">¿Cómo funciona?</button>
-
-    <div id="rules" class="result-box hidden">
-      10 preguntas sacadas de un pool más grande.  
-      A = ultra Yngwie · B = friki guitarrero · C = caos / meme.  
-      Al final se ve qué eliges más y qué tipo de fan eres.
-    </div>
-  </div>
-
-  <!-- TEST -->
-  <div class="card hidden" id="gameScreen">
-    <div class="top-bar">
-      <h1 style="margin:0;">Test Yngwie</h1>
-      <div id="soundToggle" class="sound-toggle">
-        🔈 Sonido: <span>OFF</span>
-      </div>
-    </div>
-
-    <p class="subtitle">
-      Responde como eres de verdad, que para postureo ya está Instagram.
-    </p>
-
-    <div id="questions"></div>
-
-    <button class="btn-primary" id="btnResult">Ver mi resultado 🤘</button>
-    <button class="btn-outline" id="btnReset">Reiniciar</button>
-    <button class="btn-outline" id="btnBack">Volver al inicio</button>
-
-    <div class="result-box hidden" id="resultBox"></div>
-
-    <input type="text" id="playerName" placeholder="Tu nombre para el ranking">
-    <button class="btn-primary" id="btnSave">Guardar en ranking 🏆</button>
-
-    <div class="result-box hidden" id="ranking">
-      <strong>Ranking de la noche</strong>
-      <ol id="rankingList"></ol>
-    </div>
-  </div>
-
-  <!-- OVERLAY RESULTADO -->
-  <div class="overlay hidden" id="overlay">
-    <div class="overlay-card" id="overlayCard">
-      <div id="overlayEmoji" class="big-emoji">🎸</div>
-      <h2 id="overlayTitle"></h2>
-      <p id="overlayText"></p>
-      <p id="overlayExtra"></p>
-      <button class="btn-primary" id="btnCloseOverlay">Cerrar</button>
-    </div>
-  </div>
-
-</div>
-
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-  // REFERENCIAS
-  const startScreen = document.getElementById("startScreen");
-  const gameScreen  = document.getElementById("gameScreen");
-  const btnStart    = document.getElementById("btnStart");
-  const btnShowRules= document.getElementById("btnShowRules");
-  const rules       = document.getElementById("rules");
-
-  const questionsBox= document.getElementById("questions");
-  const btnResult   = document.getElementById("btnResult");
-  const btnReset    = document.getElementById("btnReset");
-  const btnBack     = document.getElementById("btnBack");
-  const resultBox   = document.getElementById("resultBox");
-
-  const playerName  = document.getElementById("playerName");
-  const btnSave     = document.getElementById("btnSave");
-  const rankingBox  = document.getElementById("ranking");
-  const rankingList = document.getElementById("rankingList");
-
-  const overlay      = document.getElementById("overlay");
-  const overlayEmoji = document.getElementById("overlayEmoji");
-  const overlayTitle = document.getElementById("overlayTitle");
-  const overlayText  = document.getElementById("overlayText");
-  const overlayExtra = document.getElementById("overlayExtra");
-  const btnCloseOverlay = document.getElementById("btnCloseOverlay");
-
-  const soundToggle  = document.getElementById("soundToggle");
-
-  // SONIDO OPCIONAL (modo C)
-  let soundEnabled = false;
-  let audioCtx = null;
-  function beep(freq = 880, duration = 0.07) {
-    if (!soundEnabled) return;
-    try {
-      if (!audioCtx) audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-      const osc = audioCtx.createOscillator();
-      const gain = audioCtx.createGain();
-      osc.type = "square";
-      osc.frequency.value = freq;
-      gain.gain.value = 0.12;
-      osc.connect(gain);
-      gain.connect(audioCtx.destination);
-      osc.start();
-      osc.stop(audioCtx.currentTime + duration);
-    } catch(e) {}
-  }
-
-  soundToggle.addEventListener("click", () => {
-    soundEnabled = !soundEnabled;
-    soundToggle.querySelector("span").textContent = soundEnabled ? "ON" : "OFF";
-    if (soundEnabled) beep(1200, 0.12);
-  });
-
-  // NAVEGACIÓN
-  btnStart.onclick = () => {
-    startScreen.classList.add("hidden");
-    gameScreen.classList.remove("hidden");
-    window.scrollTo({ top: 0 });
-  };
-
-  btnShowRules.onclick = () => {
-    rules.classList.toggle("hidden");
-  };
-
-  btnBack.onclick = () => {
-    gameScreen.classList.add("hidden");
-    startScreen.classList.remove("hidden");
-    overlay.classList.add("hidden");
-    resultBox.classList.add("hidden");
-  };
-
-  // POOL DE PREGUNTAS (modo fiesta)
-  const questionPool = [
-    ["El altar", "Tu habitación ideal tiene...",
-      "Una Strato crema escalopada con luz dorada",
-      "Varias guitarras y pedalboard serio",
-      "Pack del súper + póster mal impreso"],
-    ["Ensayo con amigos", "Te dan un solo de 8 compases...",
-      "Solo épico de 3 minutos y viaje cósmico",
-      "Solo guapo y controlado",
-      "Ruidos, errores, pero todos se ríen"],
-    ["El metrónomo", "Tu relación con él...",
-      "Enemigo mortal. Si no explota, mal día",
-      "Herramienta profesional amor/odio",
-      "¿Metró qué? Yo pongo YouTube"],
-    ["La cita perfecta", "Plan ideal:",
-      "Concierto Yngwie + DVD Yngwie + charla Yngwie",
-      "Concierto rock y charla musical decente",
-      "Lo que sea mientras no haya solos eternos"],
-    ["Capricho guitarrero", "Tienes pasta para un capricho:",
-      "Strato crema + ampli brutal",
-      "Guitarra versátil sólida",
-      "Viaje, fiesta y lo que venga"],
-    ["Ego en escenario", "Alguien grita “¡BAJA EL VOLUMEN!”",
-      "Subes un punto más. Obvio",
-      "Te controlas y cuidas la mezcla",
-      "Respondes con un solo ruidista"],
-    ["Clases de guitarra", "A un principiante le enseñas...",
-      "Armónica menor a 200 BPM de inicio",
-      "Acordes, ritmo y algo de teoría",
-      "Caras y poses de directo"],
-    ["Frase favorita", "La que más te representa...",
-      "“More is more”",
-      "“Si sirve a la canción, vale”",
-      "“Si me río, vale”"],
-    ["Redes sociales", "Qué compartes más...",
-      "Solos imposibles y licks locos",
-      "Conciertos, música y algo de vida normal",
-      "Fails y memes absurdos"],
-    ["Final de fiesta", "Son las 4 AM, aparece una guitarra...",
-      "Arpegios hasta que salga el sol",
-      "Clásicos que todos cantan y algún solo",
-      "Tres acordes y gritar como animales"],
-    ["Ataque de GAS", "Ves una Strato crema cara...",
-      "Buscas financiación creativa inmediata",
-      "La comparas, miras reviews y piensas",
-      "Cierras la pestaña y te vas a cenar"],
-    ["Colección de discos", "Tu estantería ideal...",
-      "Discografía completa de Yngwie en varias ediciones",
-      "Mezcla equilibrada de guitarristas",
-      "Playlists de Spotify y gracias"],
-    ["Ensayo en local pequeño", "Suena todo apretado...",
-      "Tu solución: más volumen",
-      "Tu solución: ajustar eq y dinámica",
-      "Tu solución: memes en el grupo de WhatsApp"],
-    ["Vecinos", "Se quejan del volumen...",
-      "Ensayas arpegios con más distorsión",
-      "Te buscas horarios razonables",
-      "Te cambias de afinación para molestar diferente"],
-    ["Backstage imaginario", "Te ofrecen conocer a tu ídolo...",
-      "Llegas con tu propia púa para que la bendiga",
-      "Charlas de música con calma",
-      "Te haces una foto rara y ya"],
-    ["Merch oficial", "Ves camisetas de Yngwie...",
-      "Compras dos: una para usar y otra para guardar",
-      "Te pillas una si está guapa",
-      "Te haces tu propio meme en una camiseta blanca"],
-    ["Nombre de WiFi", "Cómo se llama tu WiFi...",
-      "MORE-IS-MORE-5G",
-      "Algo con guitarra o música",
-      "WIFI-DE-LA-VECINA o similar"],
-    ["Autoevaluación honesta", "Cuando alguien critica a Yngwie...",
-      "Entras en modo abogado defensor full",
-      "Te ríes pero defiendes lo bueno",
-      "Buscas memes para mandar"]
-  ];
-
-  function elegirPreguntasAleatorias(n) {
-    const pool = [...questionPool];
-    for (let i = pool.length - 1; i > 0; i--) {
-      const j = Math.floor(Math.random() * (i + 1));
-      [pool[i], pool[j]] = [pool[j], pool[i]];
-    }
-    return pool.slice(0, n);
-  }
-
-  function renderPreguntas() {
-    const seleccion = elegirPreguntasAleatorias(10);
-    questionsBox.innerHTML = seleccion.map((q, i) => `
-      <div class="question-block">
-        <div class="q-title">${i+1}. ${q[0]}</div>
-        <div class="q-sub">${q[1]}</div>
-        <label class="option"><input type="radio" name="q${i}" value="A"> A) ${q[2]}</label>
-        <label class="option"><input type="radio" name="q${i}" value="B"> B) ${q[3]}</label>
-        <label class="option"><input type="radio" name="q${i}" value="C"> C) ${q[4]}</label>
-      </div>
-    `).join("");
-  }
-
-  renderPreguntas();
-
-  btnReset.onclick = () => {
-    document.querySelectorAll("input[type=radio]").forEach(e => e.checked = false);
-    resultBox.classList.add("hidden");
-    overlay.classList.add("hidden");
-    renderPreguntas();
-  };
-
-  // CONTAR RESPUESTAS
-  function contar() {
-    let A=0,B=0,C=0;
-    const blocks = questionsBox.querySelectorAll(".question-block");
-    for(let i=0;i<blocks.length;i++){
-      const sel = blocks[i].querySelector("input[type=radio]:checked");
-      if(!sel) return null;
-      if(sel.value==="A") A++;
-      if(sel.value==="B") B++;
-      if(sel.value==="C") C++;
-    }
-    return {A,B,C};
-  }
-
-  // ESTILO SEGÚN A/B/C
-  function calcularEstilo(res) {
-    const {A,B,C} = res;
-
-    // Final secreto: todas A
-    if (A > 0 && B === 0 && C === 0) {
-      return {
-        titulo: "🔥 MODO YNGWIE ABSOLUTO 🔥",
-        texto: "Has contestado TODO en modo Yngwie. La púa tiembla, el metrónomo sufre y el universo del shred te saluda.",
-        emoji: "🔥",
-        secreto: true
-      };
-    }
-
-    if(A>B && A>C) {
-      return {
-        titulo: "SUMO SACERDOTE DE YNGWIE",
-        texto: "Sabes más de Yngwie que de la mayoría de tu familia. Reconoces un sweep suyo a kilómetros.",
-        emoji: "🔥",
-        secreto: false
-      };
-    }
-    if(B>A && B>C) {
-      return {
-        titulo: "SHREDDER ILUSTRADO",
-        texto: "Amas a Yngwie, pero tienes el altar compartido con otros dioses del mástil. Técnica + criterio.",
-        emoji: "⚡",
-        secreto: false
-      };
-    }
-    if(C>A && C>B) {
-      return {
-        titulo: "AGENTE DEL CAOS NEUTRAL",
-        texto: "Te alimentas de memes, fails y anécdotas. El shred es importante, pero las risas más.",
-        emoji: "💀",
-        secreto: false
-      };
-    }
-    return {
-      titulo: "FAN SANO CON HUMOR",
-      texto: "Te encanta la guitarra, los solos y reírte de todo un poco. Nivel de fan muy equilibrado.",
-      emoji: "🎸",
-      secreto: false
-    };
-  }
-
-  // MOSTRAR RESULTADO
-  btnResult.onclick = () => {
-    const res = contar();
-    if (!res) {
-      alert("Responde las 10 preguntas.");
-      return;
-    }
-
-    const estilo = calcularEstilo(res);
-
-    resultBox.classList.remove("hidden");
-    resultBox.innerHTML =
-      `<strong>${estilo.titulo}</strong><br>` +
-      `A=${res.A}, B=${res.B}, C=${res.C}`;
-
-    overlayEmoji.textContent = estilo.emoji;
-    overlayTitle.textContent = estilo.titulo;
-    overlayText.textContent  = estilo.texto;
-    overlayExtra.textContent = `A=${res.A}, B=${res.B}, C=${res.C}`;
-    overlay.classList.remove("hidden");
-
-    // Sonido especial si es secreto
-    if (estilo.secreto) {
-      beep(1400, 0.18);
-      setTimeout(() => beep(1800, 0.18), 200);
-      setTimeout(() => beep(2100, 0.18), 400);
-    } else {
-      beep();
-    }
-  };
-
-  btnCloseOverlay.onclick = () => {
-    overlay.classList.add("hidden");
-  };
-
-  // RANKING
-  const ranking = [];
-  btnSave.onclick = () => {
-    const res = contar();
-    if (!res) return;
-    const estilo = calcularEstilo(res);
-    const nombre = (playerName.value || "Jugador").trim();
-    ranking.push({nombre, estilo: estilo.titulo});
-    rankingList.innerHTML = ranking
-      .map(r => `<li>${r.nombre} – ${r.estilo}</li>`)
-      .join("");
-    rankingBox.classList.remove("hidden");
-  };
-});
-</script>
-
-</body>
-</html>
